src- Version 4.19/objects/Quote_Rate_Plan_Charge__c.object
<CustomObject>
    <customHelpPage>support</customHelpPage>
    <description>The tier 3 of the product catalog linked to the Quote.</description>
    <fields>
        <fullName>Accounting_Code__c</fullName>
        <label>Accounting Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Code__c</fullName>
        <description>This field is used for Minimum customer spent</description>
        <label>Charge Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Committed_Quantity__c</fullName>
        <inlineHelpText>The Quantity your customer commits to spend on a minimum.</inlineHelpText>
        <label>Committed Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost_Price__c</fullName>
        <description>Unit Cost</description>
        <label>Unit Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <description>Quantity * Unit Cost</description>
        <inlineHelpText>Quantity * Unit Cost</inlineHelpText>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CurrencyL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>look up to Currency object</description>
        <label>Currency</label>
        <referenceTo>Currency__c</referenceTo>
        <relationshipLabel>Quote Rate Plan Charge</relationshipLabel>
        <relationshipName>Quote_Rate_Plan_Charge</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deferred_Revenue_Accounting_Code__c</fullName>
        <label>Deferred Revenue Accounting Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Percent__c</fullName>
        <label>Discount %</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discount_Type__c</fullName>
        <description>This determines the Type of Discount(i.e discount applied by Value or Percentage).</description>
        <inlineHelpText>This determines the Type of Discount(i.e discount applied by Value or Percentage).</inlineHelpText>
        <label>Discount Type</label>
        <picklist>
            <picklistValues>
                <fullName>%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discount_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Discount Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exempted_From_VAT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Obsolete_Exempted From VAT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Product_Editable__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Price Editable in Quote Wizard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_Customer_Spend__c</fullName>
        <inlineHelpText>This is the Maximum Amount your customer will spend for this service. This is the capped Amount.</inlineHelpText>
        <label>Max Customer Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Customer_Spend__c</fullName>
        <inlineHelpText>This is the minimum amount your Customer has committed to spend</inlineHelpText>
        <label>Min Customer Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Total__c</fullName>
        <label>Net Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percentage_of_other_Charges__c</fullName>
        <label>% of Other Charges</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Price_Format__c</fullName>
        <description>This will specify whether Price is Default or Tiered</description>
        <label>Pricing Model</label>
        <picklist>
            <picklistValues>
                <fullName>Flat Fee Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Per Unit Pricing</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Tiered Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volume Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percentage Pricing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Price_Type__c</fullName>
        <description>This will specify whether price is Onetime/Recurring.</description>
        <label>Price Type</label>
        <picklist>
            <picklistValues>
                <fullName>One Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half Yearly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Usage</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <description>Its the Price of selected Quantities</description>
        <inlineHelpText>Quantity * Unit Price</inlineHelpText>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Bundle_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Bundle Line</label>
        <referenceTo>Product_Bundle_Line__c</referenceTo>
        <relationshipLabel>Quote Rate Plan Charges</relationshipLabel>
        <relationshipName>Quote_Rate_Plan_Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Charge_Category__c</fullName>
        <description>Use this field if you would want to configure different VAT percentages for different categories.</description>
        <inlineHelpText>Use this field if you would want to configure different VAT percentages for different categories.</inlineHelpText>
        <label>Product Charge Category</label>
        <picklist>
            <picklistValues>
                <fullName>Taxable</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Non Taxable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Rate_Plan_Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Rate Plan Charge</label>
        <referenceTo>Product_Rate_Plan_Charge__c</referenceTo>
        <relationshipLabel>Quote Rate Plan Charge</relationshipLabel>
        <relationshipName>RatePlanCharge</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Profit__c</fullName>
        <label>Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_Rate_Plan__c</fullName>
        <label>Quote Rate Plan</label>
        <referenceTo>Quote_Rate_Plan__c</referenceTo>
        <relationshipLabel>Quote Rate Plan Charge</relationshipLabel>
        <relationshipName>Quote_Rate_Plan_Charge</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Quote__c</referenceTo>
        <relationshipLabel>Quote Rate Plan Charges</relationshipLabel>
        <relationshipName>Quote_Rate_Plan_Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recurring_Period__c</fullName>
        <label>Obsolete_Recurring Period</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Renewed_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewed From</label>
        <referenceTo>Job_Rate_Plan_Charge__c</referenceTo>
        <relationshipLabel>Quote Rate Plan Charges</relationshipLabel>
        <relationshipName>Quote_Rate_Plan_Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Row_Total__c</fullName>
        <description>Row total of this charge 
Subtotal - Discount + VAT + Tax</description>
        <formula>Price__c -  Discount_Value__c +  VAT__c +  Tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Row total of this charge 
Subtotal - Discount + VAT + Tax</inlineHelpText>
        <label>Row Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sequence_No__c</fullName>
        <description>This holds the Sequence in which the charges are created and appears on the pdf files</description>
        <inlineHelpText>This holds the Sequence in which the charges are created and appears on the pdf files</inlineHelpText>
        <label>Sequence Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Code__c</fullName>
        <label>Tax Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Percentage__c</fullName>
        <label>Tax Percentage Applied</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Of_Measurement__c</fullName>
        <label>UOM</label>
        <picklist>
            <picklistValues>
                <fullName>Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>License</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unit</fullName>
                <default>true</default>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <description>Unit Price</description>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Uplift__c</fullName>
        <label>Uplift %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VAT_Percentage__c</fullName>
        <label>VAT Percentage Applied</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VAT__c</fullName>
        <label>VAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Quote Rate Plan Charge</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Charge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Rate Plan Charges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>